Create EmbeddedLauncher